--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@adonisjs/vite": "^3.0.0",
     "@aws-sdk/client-s3": "^3.699.0",
     "@aws-sdk/s3-request-presigner": "^3.699.0",
+    "@google-cloud/storage": "^7.15.0",
     "@hookform/resolvers": "^3.9.1",
     "@inertiajs/react": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
